增加了测试代码，优化了部分功能